// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prefixer plugin should prefix nested objects 1`] = `
Object {
  ":hover": Object {
    "justifyContent": "center;-webkit-box-pack:center",
  },
  "display": Array [
    "-webkit-box",
    "-moz-box",
    "-ms-flexbox",
    "-webkit-flex",
    "flex",
  ],
}
`;

exports[`Prefixer plugin should prefix styles 1`] = `
Object {
  "display": Array [
    "-webkit-box",
    "-moz-box",
    "-ms-flexbox",
    "-webkit-flex",
    "flex",
  ],
  "justifyContent": "center;-webkit-box-pack:center",
}
`;
